# aurefly

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  get-address.js  railway.toml
aurefly-web/: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  proxy.ts
aurefly-web/app/: globals.css  layout.tsx  page.tsx
aurefly-web/components/: landing-header.tsx
aurefly-web/lib/: aurefly-api.ts  auth-rate-limit.ts  backend.ts
migrations/: 0001_initial_schema.sql  0002_usdc_settlement_accounts.sql  0003_invoice_reconciliation.sql  0004_payment_observability.sql  0005_auth_sessions.sql  0006_invoice_product_fields.sql  0007_invoice_references.sql  0008_invoice_context_fields.sql  0009_invoice_payout_guardrails.sql  0010_unmatched_payments.sql  0011_unmatched_payment_resolution.sql  0012_invoice_idempotency.sql  0013_invoice_cancelled_status.sql  0014_invoice_requested_payout_address.sql  0015_supabase_user_id.sql  0016_unmatched_payment_admin_ops.sql
public/: app.js  index.html  invoice.html  invoice.js  styles.css
scripts/: live_break_tests.py  pay_invoice_from_uri.js  smoke_auth.js  smoke_cancel_inserted_invoice.py  smoke_cancel_invoice.py  smoke_cors.js  smoke_frontend.py  smoke_invoice.py  smoke_invoice_idempotency.py  smoke_invoice_validation.py  smoke_next_auth_dashboard.py  smoke_next_server_session.js  smoke_rate_limit.js  smoke_supabase_bridge.js
src/: app.rs  auth.rs  config.rs  db.rs  detector.rs  error.rs  main.rs  rate_limit.rs  solana.rs  state.rs  treasury.rs
(+55 files in other folders)
