[package]
name = "aurefly-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.8"
base64 = "0.22"
bincode = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
dotenvy = "0.15"
futures-util = "0.3"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-sdk = "2"
spl-associated-token-account = "6"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "rust_decimal", "macros", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
